spacing between time and date fixed

--- a/_css/calendarCard.css
+++ b/_css/calendarCard.css
@@ -15,9 +15,9 @@
     text-align: center;
 }
 
-#currTime {
+/* #currTime {
     margin: 0;
-}
+} */
 
 #calendar-content-container {
     margin: var(--margin);
